# borodin_ms_215_3sem

./: .gitignore
lab1_3/: .gitignore  CMakeLists.txt  arraysequence.cpp  arraysequence.h  dynamicarray.cpp  dynamicarray.h  extrafunctions.h  graphtests.h  isorter.cpp  isorter.h  linkedlist.cpp  linkedlist.h  listsequence.cpp  listsequence.h  main.cpp  sequence.h  tests.xlsx
lab2_3/: CMakeLists.txt  CreateArray.hpp  HelpArray.hpp  HelpList.hpp  Hist.hpp  keyboard.hpp  lab2.docx  main.cpp  sort.hpp  visualisation.hpp
lab2_3/Dict/: Dict.hpp  DictList.hpp  DictNode.hpp  DictNodeList.h  Idictionary.hpp
lab2_3/sequence/: ArraySequence.hpp  DynamicArray.hpp  LinkedList.hpp  ListSequence.hpp  sequence.hpp
lab2_3/tests/: ready_hist_tests.hpp  time_hist_test.hpp
lab3_3/: CMakeLists.txt  tests.xlsx
lab3_3/source/: graph.cpp  graph.h  main.cpp  tests.h
